--- a/predictor/templates/predict_form.html
+++ b/predictor/templates/predict_form.html
@@ -138,7 +138,7 @@
         </p>
 
         <h5>Endpoint:</h5>
-        <pre>https://yourdomain.com/predict/</pre>  
+        <pre>https://bipmusic.azurewebsites.net/predict/</pre>  
 
         <h5>Method:</h5>
         <p>POST</p>
@@ -163,7 +163,7 @@
         </pre>
 
         <h5>Usage:</h5>
-        <pre>curl -X POST -H "Content-Type: application/json" -d @your_json_file.json https://yourdomain.com/predict/</pre> 
+        <pre>curl -X POST -H "Content-Type: application/json" -d @your_json_file.json https://bipmusic.azurewebsites.net/predict/</pre> 
     </div>
 
 </div>
