--- a/predictor/templates/predict_form.html
+++ b/predictor/templates/predict_form.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,7 +25,7 @@
     
     
     <div class="logo-container">
-        <img src="{% static 'predictor/images/logo-bip.png' %}" alt="Website Logo">
+        <img src="https://cdn.bip-group.com/wp-content/uploads/2022/03/FB_BIP_LOGO_RGB_POS.png" alt="Website Logo">
     </div>
 
 <div class="container mt-5">
